# terra_mystica_lite

./: README.md  pyproject.toml
terra_mystica_lite/: game.py
tests/: test_game.py
